-Bug fix in KSpread_dlg_conditional.

2000-03-04 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Improved ReadWrite => when you load in konqueror a kspread file
you can't resize column or row, you can't rename table etc...

2000-03-10 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-bug fix

2000-03-17 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add financial functions that Jonathan Singer created.
thanks

2000-03-24 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Bug fix
-Now check spelling works => correct kspell.cpp
replace void slotModalDone( const char * ) by void slotModalDone( const QString & )
-David also ,bug fix
thanks.

2000-04-01 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add geometrical series

-Now Torben is back. So I corrected bug in kscript. Now Int value
can be transforme in Double Value => Create_formula works fine.
-He works on bugs thanks.

-David Faure works too on bugs, thanks.
So I think that kspread should be the best spread on linux :).

2000-04-09 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Add Improved "insert formula"

2000-04-10 -David Faure <faure@kde.org>
---------------------------------------
-Save and restore active table and cell

2000-04-12 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now you can put a name to an area.

2000-04-13 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now you can remove an area name.

2000-04-10 -David Faure <faure@kde.org>
---------------------------------------
-Improve error handling : don't abort if a cell is invalid
Still don't know why I get a row = -1 for a cell, but at least it loads.